fix button text alignment

--- a/assets/styles/components/_c-button.scss
+++ b/assets/styles/components/_c-button.scss
@@ -35,4 +35,8 @@
     width: to-rem(24);
     fill: $color-white;
   }
+
+  span {
+    vertical-align: middle;
+  }
 }
